--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-*CellO: Cell Ontology-based classification 
-![alt text](https://raw.githubusercontent.com/username/projectname/branch/path/to/img.png)
+# CellO: Cell Ontology-based classification 
+![alt text](https://raw.githubusercontent.com/deweylab/CellO/master/cello.png)
