Small adjustment to tutorial

--- a/tutorial/cello_tutorial.ipynb
+++ b/tutorial/cello_tutorial.ipynb
@@ -62,7 +62,7 @@
     "conda install -y graphviz\n",
     "pip install pygraphviz\n",
     "pip install leidenalg\n",
-    "pip install git+https://github.com/deweylab/CellO\n",
+    "pip install cello-classify\n",
     "```"
    ]
   },
@@ -2023,8 +2023,8 @@
     "\n",
     "cello.scanpy_cello(\n",
     "    adata, \n",
-    "    'leiden',\n",
-    "    cello_resource_loc, \n",
+    "    clust_key='leiden',\n",
+    "    rsrc_loc=cello_resource_loc, \n",
     "    out_prefix=model_prefix\n",
     ")"
    ]
@@ -2141,8 +2141,8 @@
     "\n",
     "cello.scanpy_cello(\n",
     "    adata, \n",
-    "    'leiden',\n",
-    "    cello_resource_loc, \n",
+    "    clust_key='leiden',\n",
+    "    rsrc_loc=cello_resource_loc,  \n",
     "    model_file=f'{model_prefix}.model.dill'\n",
     ")"
    ]
@@ -2354,7 +2354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
